<resources>
    <string name="app_name">Popular Movies Stage 1</string>

    <string name="action_settings">Settings</string>
    <string name="action_popular">Popular</string>
    <string name="action_highest_rated">Highest Rated</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="label_movie_synopsis">Synopsis</string>
    <string name="label_original_title">Original Title</string>
    <string name="label_user_rating">Rating</string>
    <string name="label_release_date">Release Date</string>

    <string name="movie">Movie Thumbail</string>
</resources>
