<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dlv.nanodegree.popularmovies_1.DetailActivity"
    android:animateLayoutChanges="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:id="@+id/ll_top"
        android:weightSum="2"
        android:paddingTop="15dp"
        android:background="@color/background_material_dark"
        >
        <ImageView
            android:id="@+id/iv_details_image"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:scaleType="fitStart"
            android:contentDescription="@string/movie"
            />
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/tv_label_title"
                style="@style/titleTextView"
                android:text="@string/label_original_title"
                android:layout_alignParentTop="true"
                android:textColor="@color/primary_material_light"
                />
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_original_title"
                android:layout_below="@+id/tv_label_title"
                android:textColor="@color/primary_material_light"
                />

            <TextView
                android:id="@+id/tv_label_date"
                style="@style/titleTextView"
                android:text="@string/label_release_date"
                android:layout_below="@id/tv_title"
                android:textColor="@color/primary_material_light"
                />
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_release_date"
                android:layout_below="@id/tv_label_date"
                android:textColor="@color/primary_material_light"
                />

            <TextView
                android:id="@+id/tv_label_rating"
                android:layout_below="@id/tv_date"
                style="@style/titleTextView"
                android:text="@string/label_user_rating"
                android:textColor="@color/primary_material_light"
                />
            <TextView
                android:id="@+id/tv_rating"
                android:layout_below="@id/tv_label_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_user_rating"
                android:textColor="@color/primary_material_light"
                />

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_label_synopsis"
        style="@style/titleTextView"
        android:layout_below="@+id/ll_top"
        android:text="@string/label_movie_synopsis"
        android:layout_marginTop="8dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tv_label_synopsis"
        android:overScrollMode="ifContentScrolls"
        >
        <TextView
            android:id="@+id/tv_synopsis"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/label_movie_synopsis"
            />
    </ScrollView>
</RelativeLayout>
